[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" # handle the network buffer
prost = "0.9" # handle protobuf
thiserror = "1" # error defination and handling
dashmap = "5" # concurrent hash map
http = "0.2" # import this to use HTTP status code
tracing = "0.1" # handle logging

[dev-dependencies]
anyhow = "1" # handle error
async-prost = "0.3.0" # support wrap protobuf into TCP frame
futures = "0.3" # supply Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"]}
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = { version = "0.9" }